# byoe

./: .clang-format  .gitignore  .swp  CMakeLists.txt  README.md  Readme.md  todo
.github/: build_linux.yml
.github/workflows/: build_linux.yml  build_mac.yml  build_win.yml
benchmarks/: CMakeLists.txt  benchmark.h  benchmark_hash_map.h  benchmark_main.c
engine/: CMakeLists.txt  engine.c  engine.h
engine/core/: common.h  engine_main.c  frustum.c  frustum.h  game_registry.c  game_registry.h  game_state.c  game_state.h  gameobject.c  gameobject.h  image.c  image.h  main.c  math_util.c  math_util.h  mesh.h  model_loading.c  model_loading.h  shader.c  shader.h  shapes.c  shapes.h  utils.c  utils.h
engine/core/containers/: bitset.c  bitset.h  hash_map.c  hash_map.h  typed_growable_array.c  typed_growable_array.h  typed_ring_buffer.c  typed_ring_buffer.h
engine/core/logging/: log.h
engine/core/memory/: memalign.c  memalign.h
engine/core/rng/: rng.c  rng.h
engine/core/simd/: compiler_defs.h  intrinsics.c  intrinsics.h  platform_caps.c  platform_caps.h
engine/core/uuid/: uuid.c  uuid.h
engine/render/: render_structs.h  render_utils.c  render_utils.h  renderer_sdf.c  renderer_sdf.h
engine/render/backend/: backend_dx12.c  backend_dx12.h  backend_vulkan.c  backend_vulkan.h
engine/render/frontend/: gfx_frontend.c  gfx_frontend.h
engine/scene/: camera.h  sdf_scene.c  sdf_scene.h  transform.h
engine/scripting/: scripting.c  scripting.h
engine/shaders/: clear_texture.comp  cs_test.comp  env.fs  env.vs  env_instanced.vs  frag  hf.txt  hv.txt  raymarch  raymarch.frag  raymarch_sdf_scene  raymarch_sdf_scene.comp  raymarch_sdf_scene.frag  screen_quad.frag  screen_quad.vert  simple_vert  triangle.frag  triangle.vert  vert.spv  vertex
engine/shaders_built/: screen_quad.frag.hlsl  screen_quad.vert.cso  screen_quad.vert.hlsl  screen_quad.vert.spv  triangle.vert.spv
engine/shaders_built/headers/: clear_texture.comp.cso.h
game/: CMakeLists.txt  camera_controller.c  camera_controller.h  game_main.c  main.c  player.c  player.h
game/shaders_built/: clear_texture.comp.cso  clear_texture.comp.hlsl  clear_texture.comp.spv  cs_test.comp.cso  cs_test.comp.hlsl  cs_test.comp.spv  raymarch_sdf_scene.comp.cso  raymarch_sdf_scene.comp.hlsl  raymarch_sdf_scene.comp.spv  screen_quad.frag.cso  screen_quad.frag.hlsl  screen_quad.frag.spv  screen_quad.vert.cso  screen_quad.vert.hlsl  screen_quad.vert.spv  triangle.frag.cso  triangle.frag.hlsl  triangle.frag.spv  triangle.vert.cso  triangle.vert.hlsl  triangle.vert.spv
scripts/: clang_format_byoe.py  generate_vs22_android.bat
sdf/: README.md
sdf/examples/: sphere.sdf
sdf/sdf_editor/: CMakeLists.txt  README.md  add_primitive.c  add_primitive.h  file_browser.c  file_browser.h  icon.c  icon.h  implementations.c  main.c  menu.c  menu.h  nuklear_glfw_gl3.h  nuklear_include.h  sdf_editor  sidebar.c  sidebar.h  template.frag  ui.c  viewport.c  viewport.h
sdf/sdf_editor/resources/: gridfrag  gridvert  raymarch.frag
sdf/sdf_format/: sdf_file_types.h  sdf_typedefs.h
sdf/sdf_format/examples/: spaceship.sdf
sdf/sdf_parser/: sdf_types.h  sdftypes.h
tests/: CMakeLists.txt  benchmark.h  test.h  test_hash_map.c  test_hash_map.h  test_main.c  test_rng.h  test_sdf_scene.h  test_sdf_scene_golden_image.ppm  test_uuid.h
